Add island management and progression features