@@ -1,9 +1,11 @@
 package id.alvarennation.acidIsland.commands;
 
+import id.alvarennation.acidIsland.AcidIsland;
 import org.bukkit.Bukkit;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
+import org.bukkit.configuration.ConfigurationSection;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -11,62 +13,87 @@ import org.jetbrains.annotations.Nullable;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Locale;
 import java.util.stream.Collectors;
 
 public class AcidIslandTabCompleter implements TabCompleter {
 
-    private final id.alvarennation.acidIsland.AcidIsland plugin;
+    private final AcidIsland plugin;
 
-    public AcidIslandTabCompleter(id.alvarennation.acidIsland.AcidIsland plugin) {
+    private static final List<String> SUBCOMMANDS = Arrays.asList(
+            "help", "start", "home", "sethome", "setting", "upgrade",
+            "vault", "bank", "invite", "accept", "reject", "kick",
+            "leave", "delete", "lobby", "info", "quest", "level",
+            "top", "theme", "role", "setlobby", "reload", "admin"
+    );
+
+    public AcidIslandTabCompleter(AcidIsland plugin) {
         this.plugin = plugin;
     }
 
-    private static final List<String> SUBCOMMANDS = Arrays.asList(
-            "help", "start", "home", "sethome", "setting", "upgrade", 
-            "vault", "bank", "invite", "accept", "reject", "kick", 
-            "leave", "delete", "lobby"
-    );
-
     @Override
     public @Nullable List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String alias, @NotNull String[] args) {
-        if (!(sender instanceof Player player)) {
-            return new ArrayList<>();
-        }
-
-        List<String> completions = new ArrayList<>();
-
         if (args.length == 1) {
-            String input = args[0].toLowerCase();
-            List<String> available = new ArrayList<>(SUBCOMMANDS);
-            completions = available.stream()
-                    .filter(s -> s.startsWith(input))
-                    .collect(Collectors.toList());
-        } else if (args.length == 2) {
-            String sub = args[0].toLowerCase();
-            String input = args[1].toLowerCase();
+            return filter(SUBCOMMANDS, args[0]);
+        }
 
-            if (sub.equals("invite") || sub.equals("kick")) {
-                completions = Bukkit.getOnlinePlayers().stream()
-                        .map(Player::getName)
-                        .filter(name -> !name.equals(player.getName()))
-                        .filter(name -> name.toLowerCase().startsWith(input))
-                        .collect(Collectors.toList());
-            } else if (sub.equals("bank")) {
-                completions = Arrays.asList("deposit", "withdraw").stream()
-                        .filter(s -> s.startsWith(input))
-                        .collect(Collectors.toList());
+        String sub = args[0].toLowerCase(Locale.ROOT);
+        if (args.length == 2) {
+            return switch (sub) {
+                case "invite", "kick", "role" -> onlinePlayerNames(sender, args[1]);
+                case "bank" -> filter(List.of("deposit", "withdraw"), args[1]);
+                case "quest", "quests" -> filter(List.of("claim"), args[1]);
+                case "level" -> filter(List.of("refresh"), args[1]);
+                case "theme", "themes", "biome" -> filter(getThemeIds(), args[1]);
+                case "admin" -> filter(List.of("delete", "reset", "tp"), args[1]);
+                default -> new ArrayList<>();
+            };
+        }
+
+        if (args.length == 3) {
+            if (sub.equals("bank") && (args[1].equalsIgnoreCase("deposit") || args[1].equalsIgnoreCase("withdraw"))) {
+                return filter(List.of("100", "1000", "5000", "10000"), args[2]);
             }
-        } else if (args.length == 3) {
-            String sub = args[0].toLowerCase();
-            String bankSub = args[1].toLowerCase();
-            if (sub.equals("bank") && (bankSub.equals("deposit") || bankSub.equals("withdraw"))) {
-                String input = args[2].toLowerCase();
-                completions = Arrays.asList("100", "1000", "5000", "10000").stream()
-                        .filter(s -> s.startsWith(input))
-                        .collect(Collectors.toList());
+            if (sub.equals("quest") || sub.equals("quests")) {
+                return args[1].equalsIgnoreCase("claim") ? filter(plugin.getQuestManager().getQuestIds(), args[2]) : new ArrayList<>();
+            }
+            if (sub.equals("role") || sub.equals("roles")) {
+                return filter(List.of("member", "trusted", "co_owner"), args[2]);
+            }
+            if (sub.equals("admin")) {
+                return onlinePlayerNames(sender, args[2]);
             }
         }
 
-        return completions;
+        return new ArrayList<>();
+    }
+
+    private List<String> onlinePlayerNames(CommandSender sender, String input) {
+        return Bukkit.getOnlinePlayers().stream()
+                .map(Player::getName)
+                .filter(name -> !(sender instanceof Player player) || !name.equals(player.getName()))
+                .filter(name -> name.toLowerCase(Locale.ROOT).startsWith(input.toLowerCase(Locale.ROOT)))
+                .collect(Collectors.toList());
+    }
+
+    private List<String> getThemeIds() {
+        ConfigurationSection section = plugin.getConfigManager().getConfig().getConfigurationSection("themes");
+        List<String> ids = new ArrayList<>();
+        if (section == null) {
+            return ids;
+        }
+        for (String key : section.getKeys(false)) {
+            if (section.getConfigurationSection(key) != null) {
+                ids.add(key);
+            }
+        }
+        return ids;
+    }
+
+    private List<String> filter(List<String> values, String input) {
+        String lower = input.toLowerCase(Locale.ROOT);
+        return values.stream()
+                .filter(value -> value.toLowerCase(Locale.ROOT).startsWith(lower))
+                .collect(Collectors.toList());
     }
 }
